# oops

./: .coveragerc  .flake8  .gitignore  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tagger.yml  tests-pipenv.yml  tests.yml
oops/: lists.py
src/oops/: lists.py  searches.py
tests/: test_lists.py  test_searches.py
