[metadata]
name = oops
description = Object Oriented Programming Structures
author = Andrei Sandu
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    oops
; install_requires = 
    ; dependency>=version
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8==6.0.0
    flake8-html==0.4.3
    mypy==1.0.1
    pipenv==2023.2.18
    pytest==7.2.2
    pytest-cov==4.0.0
    pytest-html==3.2.0
    tox==4.4.6

[options.package_data]
oops = py.typed
